--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>進捗みくじ</title>
     <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
@@ -26,7 +27,7 @@
         <div class="mb-2">
             <div class="card card-block text-xs-center">
                 <h4 class="card-title">運勢の順番</h4>
-                <p class="card-text">進捗みくじの運勢の順番「 大進捗 &gt; 進捗 &gt; 中進捗 &gt; 小進捗 &gt; 末進捗 &gt; 停滞 &gt; 大停滞 」です。大進捗が最も捗り、大停滞は最も滞ります。この中に含まれていない運勢が出る可能性もあります。また、人によっては後ろの運勢の方が嬉しい場合もあるかもしれません。進捗具合には個人差があります。</p>
+                <p class="card-text">進捗みくじの運勢の順番「 大進捗 &gt; 進捗 &gt; 中進捗 &gt; 小進捗 &gt; 末進捗 &gt; 停滞 &gt; 大停滞 」です。大進捗が最も捗り、大停滞は最も滞ります。人によっては悪い運勢の方が嬉しい場合もあるかもしれません。進捗具合には個人差があります。</p>
             </div>
             
             <div class="alert alert-danger alert-dismissible fade in" role="alert">
