--- a/raffle.html
+++ b/raffle.html
@@ -3,6 +3,7 @@
 <head>
     <title>進捗みくじ</title>
     <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
