進捗みくじを引くボタンのサイズを変更

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p>2017年度の進捗具合を占ってみませんか？</p>
             <p>今なら、無料でくじを引けます。</p>
             <img src="images/main.png" width="90%"/>
-            <a href="raffle.html" class="btn btn-lg btn-vermilion mt-2 mb-3">くじを引く</a>
+            <a href="raffle.html" class="btn btn-lg btn-vermilion btn-block mt-2 mb-3">くじを引く</a>
         </div>
 
         <div class="mb-2">
