--- a/result.html
+++ b/result.html
@@ -19,7 +19,7 @@
         <div class="text-xs-center">
             <h1 class="mb-2">今年の進捗は・・・</h1>
             <div id="omikuji-container"></div>
-           <a href="raffle.html" class="btn btn-lg btn-vermilion mt-2 mb-3">引き直す</a>
+           <a href="raffle.html" class="btn btn-lg btn-vermilion btn-block mt-2 mb-3">引き直す</a>
         </div>
 
         <div id="omikuji-pagenation">
